@@ -20,5 +20,13 @@ foo (int y)
 /* { dg-final { scan-assembler-not "push"  } } */
 /* { dg-final { scan-assembler-not "pop"  } } */
 
-/* Check that addition uses dx. */
-/* { dg-final { scan-assembler-times "addl\t%\[re\]?dx, %\[re\]?ax" 1 } } */
+/* PR61605.  If the first argument register and the return register differ, then
+   bar leaves the first argument register intact.  That means in foo that the
+   first argument register still contains y after bar has been called, and
+   there's no need to copy y to a different register before the call, to be able
+   to use it after the call.
+   Check that the copy is absent.  */
+/* { dg-final { scan-assembler-not "movl" { target { ! ia32 } } } } */
+
+/* Check that addition uses di (in case of no copy) or dx (in case of copy). */
+/* { dg-final { scan-assembler-times "addl\t%\[re\]?d\[ix\], %\[re\]?ax" 1 } } */
